deploy/k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  #tls:
  #  - hosts:
  #    - stand-up.botenza.com
  #    secretName: app-secret-tls
  rules:
    - host: stand-up.botenza.com
      http:
        paths:
          - path: /api/slack
            pathType: "Prefix"
            backend:
              service:
                name: api-service
                port:
                  number: 3000
          - path: /
            pathType: "Prefix"
            backend:
              service:
                name: ui-service
                port:
                  number: 3000
