deploy/k8s/standup-bot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: standup-bot-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - standup.botenza.com
      secretName: standup-bot-cert-secret
  rules:
    - host: standup.botenza.com
      http:
        paths:
          - path: /api
            pathType: "Prefix"
            backend:
              service:
                name: standup-api-service
                port:
                  number: 3000
          - path: /
            pathType: "Prefix"
            backend:
              service:
                name: standup-ui-service
                port:
                  number: 3000
    - host: grafana.botenza.com
      http:
        paths:
          - path: /
            pathType: "Prefix"
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
